# igraph

./: igraph.cabal
Data/: IGraph.hs
Data/IGraph/: Basic.hs  Cliques.hs  Community.hs  Internal.hs  Layout.hs  Parser.hs  Structure.hs
Data/IGraph/Internal/: Constants.chs
cbits/: igraph.c
