Name:                 igraph
Version:              0.2.0.0
Synopsis:             Bindings to the igraph C library.
Description:          bindings to the igraph C library. Requires igraph 0.7.
License:              BSD3
License-file:         LICENSE
Author:               Nils Schweinsberg, George Giorgidze, Kai Zhang
Maintainer:           kai@kzhang.org
Category:             Data Structures, Graphs
Build-type:           Simple
Cabal-version:        >=1.8

source-repository head
  type:               git
  location:           https://github.com/giorgidze/igraph.git

Library
  GHC-options:
    -Wall -O3 -funbox-strict-fields 
  CC-options:
    -Wall
  Build-depends:
    base >= 4.3.1.0 && < 5,
    containers,
    unordered-containers,
    hashable,
    vector
  Extensions:
    ForeignFunctionInterface,
    EmptyDataDecls,
    MultiParamTypeClasses,
    GADTs,
    TypeFamilies,
    FlexibleContexts,
    FlexibleInstances
  Extra-Libraries:
    igraph
  C-Sources:
    cbits/igraph.c
    cbits/attributes.c
  Build-Tools:
    c2hs
  Exposed-modules:
      Data.IGraph
    , Data.IGraph.Structure
    , Data.IGraph.Cliques
    , Data.IGraph.Community
    , Data.IGraph.Layout
    , Data.IGraph.Parser
  Other-modules:
    Data.IGraph.Internal
    Data.IGraph.Internal.Constants
    Data.IGraph.Types
